# TestProject

./: .dockerignore  .flake8  .gitignore  Dockerfile.api  Dockerfile.worker  Makefile  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  start_api.sh
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 001_create_images_table.py
src/: config.py
src/api/: dependencies.py  main.py  schemas.py
src/api/routes/: health.py  images.py
src/database/: connection.py
src/models/: image.py
src/services/: image_processor.py  image_service.py  logger.py  rabbitmq_service.py
src/worker/: main.py
tests/: conftest.py  test_api.py  test_integration.py  test_services.py
